<resources>
    <string name="app_name">ULesson</string>

    <string name="message_event_no_internet">No internet</string>
    <string name="message_event_generic">Something wrong happened. Please try again</string>
    <string name="retry_button">Retry</string>
    <string name="module_title">Materials - Metals &amp; Non Metals</string>
    <string name="gabriella">Gabriella Adeboye</string>
    <string name="timing">Today, 3:30 PM</string>
    <string name="live">live</string>
    <string name="physics">Physics</string>
</resources>