<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clCarouselBanner"
    android:layout_width="match_parent"
    android:layout_height="190dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:adjustViewBounds="true"
    android:background="@drawable/bg_rounded_card"
    android:foreground="?attr/selectableItemBackgroundBorderless"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/ivTutorPic"
        android:layout_width="124dp"
        android:layout_height="182dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvLive"
        android:layout_width="60dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/bg_live"
        android:gravity="center"
        android:padding="2dp"
        android:paddingStart="6dp"
        android:paddingEnd="2dp"
        android:text="@string/live"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:drawableStartCompat="@drawable/ic_circle"
        app:layout_constraintBottom_toTopOf="@+id/tvModuleTitle"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvModuleTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="36dp"
        android:text="@string/module_title"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTiming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        android:drawablePadding="4dp"
        android:padding="2dp"
        android:text="@string/timing"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:drawableStartCompat="@drawable/ic_access_time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvModuleTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvModuleTitle" />

    <TextView
        android:id="@+id/tvTutorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        android:drawablePadding="4dp"
        android:padding="2dp"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:text="@string/gabriella"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:drawableStartCompat="@drawable/ic_separator_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvTiming"
        app:layout_constraintTop_toBottomOf="@+id/tvModuleTitle" />


</androidx.constraintlayout.widget.ConstraintLayout>